fixed dialog alignment

--- a/DuoNat/css/components.css
+++ b/DuoNat/css/components.css
@@ -1,5 +1,15 @@
 /* Styles for dialogs mostly */
 
+/* Generic dialog style */
+
+dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+}
+
 /* Styles for share button on main page */
 #share-button {
     position: fixed;
